# lmx2db

./: .codespell.dictionary  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  Cargo.toml  LICENSE  README.md  check_type  pyproject.toml  sample_sqltypes.yml
schema/: functions.sql  minimal_data.sql  mpi_names.sql  tables.sql  view.sql
src/: checktypes.rs  cmdline.rs  connect.rs  globbing.rs  jobdata.rs  main.rs  positional_args.rs  sqlkeys.rs  sqltypes.rs  test_env.rs
src/checktypes/: elementary.rs  wrong_values.rs
src/cmdline/: cmdline_tests.rs
src/globbing/: lmx_type_files.rs
src/jobdata/: base_data.rs  checktypes.rs  create_sql.rs  jobs_tests.rs  mpi_ranks.rs  table_environ.rs  table_iprof.rs  table_mmm.rs  table_mpi.rs  table_runs.rs  table_settings.rs  table_tasks.rs  test_import.rs  test_job_failures.rs  test_sql_file.rs
src/jobdata/base_data/: test_errors.rs  test_functionality.rs
src/jobdata/checktypes/: elementary.rs  type_normalization_tests.rs  wrong_values.rs
src/jobdata/create_sql/: test_import.rs  test_update.rs
src/jobdata/mpi_ranks/: test_errors.rs  test_functionality.rs
src/jobdata/table_environ/: test_empty_queries.rs  test_errors.rs  test_import_environ.rs  test_non_empty_queries.rs
src/jobdata/table_iprof/: extract_full_function_name.rs  extract_full_library_name.rs  extract_full_name.rs  extract_iprof_ticks.rs  import_into_iprof.rs
src/jobdata/table_mpi/: extract_profile.rs  import_into_mpi_table.rs  vec_serde_yaml.rs
src/jobdata/table_runs/: find_file.rs  foreign_keys.rs  misc_columns.rs  timing_data.rs  toolchain.rs
src/jobdata/table_settings/: test_import_settings.rs
src/sqlkeys/: create_sqlkeys.rs  sqlkey_hashmap.rs
src/sqltypes/: create_sqltypes.rs  sqltype_hashmap.rs
tests/data/: modules.yml
tests/data/GROMACS/: project.yml
tests/fixtures/: functs4test.sql  lmxtest.sql  minimal_data.sql  mpi_names.sql  tables.sql
(+58 files in other folders)
