[package]
name = "lmx2db"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "mysql", "macros"] }
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.24.0"
