[package]
name = "lmx2db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
fs_extra = "1.3.0"
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_yml = "0.0.12"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "mysql", "macros"] }
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.24.0"
